# indiscipline

./: .gitignore  CMakeLists.txt  Control.geany  README.md  config.geany
pd/: main.pd  test.pd
pd/lib/: ++.pd  --.pd  AB.pd  LFO~.pd  accum.pd  array-print.pd  audio-track.pd  col-light-tracking.pd  envelope~.pd  grid-in.pd  grid-state.pd  griddy.pd  limit.pd  loop-track.pd  microlooper.pd  modmod.pd  modulate.pd  modulate~.pd  num-seq.pd  numseq.pd  num~.pd  osc-addr.pd  param.pd  rand-seq~.pd  randosc~.pd  range-limit.pd  scope~.pd  send-osc.pd  set-col.pd  set-state.pd  throttle.pd  trail.pd
pd/lib/gui/: LFO.pd  rand-seq.pd
python-cli/: setup.py
python-cli/send_osc/: main.py
scripts/: README.md  audio.lua  cairotest.lua  display.lua  home.lua  pd_init.lua  utils.lua
scripts/components/: menu.lua
src/: audio-sink-abstract.h  audio-sink-base.h  audio-sink.cpp  audio-sink.h  cairo-wrapper.cpp  cairo-wrapper.h  display.cpp  display.h  fb-display.cpp  fb-display.h  lua-functions.cpp  lua-runner-abstract.h  lua-runner-base.h  lua-runner.cpp  lua-runner.h  main.cpp  main.h  osc-server.cpp  osc-server.h  screen-base.h  spi-display.cpp  spi-display.h  window.cpp  window.h
src/hardware/: gpio-base.h  gpio-daemon.cpp  gpio.cpp  gpio.h  i2c-device.h  panel-abstract.h  panel-base.h  panel.cpp  panel.h  pcf-8574.cpp  pcf-8574.h  ssd1306-base.h  ssd1306-i2c.cpp  ssd1306-i2c.h  ssd1306-spi.cpp  ssd1306-spi.h
src/hardware/deprecated/: gpio.cpp  ssd1306-i2c.h
